<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_entrance">Вход</string>
    <string name="text_name">Имя</string>
    <string name="text_surname">Фамилия</string>
    <string name="text_number_phone">Номер телефона</string>
    <string name="text_enter">Войти</string>
    <string name="text_conditions1">Нажимая кнопку “Войти”, Вы принимаете</string>
    <string name="text_conditions2"><u>условия программы лояльности</u></string>
</resources>