<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthFragment"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            style="@style/TitleToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_entrance"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_input_name"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/text_name"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_clear_name"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="11dp"
                android:background="@drawable/ic_delete"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_input_surname"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/text_surname"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_clear_surname"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="11dp"
                android:background="@drawable/ic_delete"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/et_input_number_phone"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/text_number_phone"
                android:inputType="number"
                app:mask="+7 (___) ___ __ __"
                app:maskCharacter="_"
                app:maskStyle="completable"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/btn_clear_number_phone"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginRight="11dp"
                android:background="@drawable/ic_delete"
                android:visibility="gone" />
        </FrameLayout>

        <Button
            android:id="@+id/bt_enter"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/bg_buttom"
            android:enabled="false"
            android:fontFamily="sans-serif-medium"
            android:text="@string/text_enter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/text_conditions1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center"
            android:text="@string/text_conditions1"
            android:textColor="@color/average_gray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/text_conditions2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center"
            android:text="@string/text_conditions2"
            android:textColor="@color/average_gray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>